--- a/Src/FishOnMobileApp/FishOnMobileApp/MainPage.xaml
+++ b/Src/FishOnMobileApp/FishOnMobileApp/MainPage.xaml
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
+
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:FishOnMobileApp"
              x:Class="FishOnMobileApp.MainPage">
 
    <StackLayout>
-     <Button Text="Fish ON!" />
-     <Button Text="Find a Spot" />
+     <Button Text="Fish ON!" Command="{Binding FishOnCommand}" />
+     <Button Text="Find a Spot" Command="{Binding FindMySpotCommand}" />
    
      <ActivityIndicator IsRunning="{Binding IsBusy}"></ActivityIndicator>
    </StackLayout>
