--- a/Src/FishOnMobileApp/FishOnMobileApp/SpeciesListPage.xaml
+++ b/Src/FishOnMobileApp/FishOnMobileApp/SpeciesListPage.xaml
@@ -3,4 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FishOn.SpeciesListPage">
   <Label Text="Species List" VerticalOptions="Center" HorizontalOptions="Center" />
+  <Button
+    Text="Cancel"
+    Command="{Binding CancelCommand}"/>
+  
 </ContentPage>
