--- a/Src/FishOnMobileApp/FishOnMobileApp/SpeciesListPage.xaml
+++ b/Src/FishOnMobileApp/FishOnMobileApp/SpeciesListPage.xaml
@@ -1,10 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:viewModel="clr-namespace:FishOn.ViewModel;assembly=FishOnMobileApp"
              x:Class="FishOn.SpeciesListPage">
-  <Label Text="Species List" VerticalOptions="Center" HorizontalOptions="Center" />
-  <Button
-    Text="Cancel"
-    Command="{Binding CancelCommand}"/>
   
+ <ListView HasUnevenRows="True" x:Name="speciesListView"
+                ItemsSource="{Binding SpeciesList}" SelectedItem="{Binding SelectedSpecies}" >
+ <ListView.ItemTemplate>
+   <DataTemplate>
+      <ViewCell>
+         <StackLayout>
+            <Button Text="{Binding Name}" 
+                    Command="{Binding Path=BindingContext.SelectSpeciesCommand, 
+                             Source={viewModel:ElementSource speciesListView}}"
+                    CommandParameter="{Binding}"/>
+         </StackLayout>
+      </ViewCell> 
+   </DataTemplate>
+ </ListView.ItemTemplate>
+</ListView>
 </ContentPage>
