Added WeatherService Added UnitTest project Added 'Async' keyword to all async methods

--- a/Src/FishOnMobileApp/FishOnMobileApp/SpeciesListPage.xaml
+++ b/Src/FishOnMobileApp/FishOnMobileApp/SpeciesListPage.xaml
@@ -19,4 +19,5 @@
    </DataTemplate>
  </ListView.ItemTemplate>
 </ListView>
+<Button Text="BOAT LANCH" Command="{Binding SelectSpeciesCommand}"></Button>
 </ContentPage>
