--- a/Src/FishOnMobileApp/FishOnMobileApp/LakeMapPage.xaml
+++ b/Src/FishOnMobileApp/FishOnMobileApp/LakeMapPage.xaml
@@ -1,6 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:maps="clr-namespace:Xamarin.Forms.Maps;assembly=Xamarin.Forms.Maps"
              x:Class="FishOn.LakeMapPage">
-  <Label Text="LakeMap" VerticalOptions="Center" HorizontalOptions="Center" />
+  
+    <StackLayout VerticalOptions="StartAndExpand" Padding="30">
+      <maps:Map WidthRequest="320" HeightRequest="200"
+          x:Name="MyMap"
+          IsShowingUser="true"
+          MapType="Hybrid"
+        />
+    </StackLayout>
+  
 </ContentPage>
