--- a/Src/FishOnMobileApp/FishOnMobileApp/MainPage.xaml
+++ b/Src/FishOnMobileApp/FishOnMobileApp/MainPage.xaml
@@ -8,7 +8,8 @@
    <StackLayout>
      <Button Text="Fish ON!" Command="{Binding FishOnCommand}" />
      <Button Text="Find a Spot" Command="{Binding FindMySpotCommand}" />
-   
+     <Button Text="Set Lake / Water Temp" Command="{Binding SetLakeWaterTemp}" />
+     
      <ActivityIndicator IsRunning="{Binding IsBusy}"></ActivityIndicator>
    </StackLayout>
 
