--- a/Src/FishOnMobileApp/FishOnMobileApp/LakeMapPage.xaml
+++ b/Src/FishOnMobileApp/FishOnMobileApp/LakeMapPage.xaml
@@ -6,9 +6,13 @@
   
     <StackLayout VerticalOptions="StartAndExpand" Padding="30">
       <maps:Map WidthRequest="320" HeightRequest="200"
-          x:Name="MyMap"
-          IsShowingUser="true"
-          MapType="Hybrid"
+            x:Name="WayPointsMap"
+            IsShowingUser="true"
+            MapType="Street"
+            MinimumHeightRequest="100"
+            MinimumWidthRequest="960"
+            VerticalOptions="Fill"   
+          
         />
     </StackLayout>
   
