--- a/Src/FishOnMobileApp/FishOnMobileApp/LakeMapPage.xaml
+++ b/Src/FishOnMobileApp/FishOnMobileApp/LakeMapPage.xaml
@@ -4,16 +4,11 @@
              xmlns:maps="clr-namespace:Xamarin.Forms.Maps;assembly=Xamarin.Forms.Maps"
              x:Class="FishOn.LakeMapPage">
   
-    <StackLayout VerticalOptions="StartAndExpand" Padding="30">
-      <maps:Map WidthRequest="320" HeightRequest="200"
+    <StackLayout>
+      <maps:Map HeightRequest="500"
             x:Name="WayPointsMap"
             IsShowingUser="true"
-            MapType="Street"
-            MinimumHeightRequest="100"
-            MinimumWidthRequest="960"
-            VerticalOptions="Fill"   
-          
-        />
+            MapType="Street"/>
     </StackLayout>
   
 </ContentPage>
