--- a/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/ProvisioningPages/WayPoints/WPProvisoningList.xaml
+++ b/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/ProvisioningPages/WayPoints/WPProvisoningList.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewModel="clr-namespace:FishOn.ViewModel;assembly=FishOnMobileApp"
-             x:Class="FishOn.ProvisioningPages.WayPoints.WPProvisoningList">
+             x:Class="FishOn.ProvisioningPages.WayPoints.WPProvisoningList"
+             Title="Way Points">
   <StackLayout Padding="5,0,5,0">
     <StackLayout Orientation="Horizontal">
       <Label Text="Way Points"></Label>
