--- a/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/LakeMap/LakeMapDetailPage.xaml
+++ b/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/LakeMap/LakeMapDetailPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:maps="clr-namespace:Xamarin.Forms.Maps;assembly=Xamarin.Forms.Maps"
-             x:Class="FishOn.Pages_VMs.LakeMap.LakeMapDetailPage"
+             x:Class="FishOn.Pages_MVs.LakeMap.LakeMapDetailPage"
              Title="Way Point Map">
 
   <StackLayout>
