--- a/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/ProvisioningPages/MyFish/MyFishByWayPoints.xaml
+++ b/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/ProvisioningPages/MyFish/MyFishByWayPoints.xaml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="FishOn.Pages_VMs.ProvisioningPages.MyFish.MyFishByWayPoints"
+             x:Class="FishOn.Pages_MVs.ProvisioningPages.MyFish.MyFishByWayPoints"
              Title="By Way Point">
 </ContentPage>
