--- a/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/ProvisioningPages/MyFish/MyFishTabbedPage.xaml
+++ b/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/ProvisioningPages/MyFish/MyFishTabbedPage.xaml
@@ -1,8 +1,8 @@
 ﻿<TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
             xmlns:wayPoints="clr-namespace:FishOn.ProvisioningPages.WayPoints;assembly=FishOnMobileApp"
-            xmlns:tackleBox="clr-namespace:FishOn.Pages_VMs.ProvisioningPages.TackleBox;assembly=FishOnMobileApp"
-            x:Class="FishOn.Pages_VMs.ProvisioningPages.MyFish.MyFishTabbedPage"
+            xmlns:tackleBox="clr-namespace:FishOn.Pages_MVs.ProvisioningPages.TackleBox;assembly=FishOnMobileApp"
+            x:Class="FishOn.Pages_MVs.ProvisioningPages.MyFish.MyFishTabbedPage"
             Title="{Binding Title}"
             >
 
