--- a/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/ProvisioningPages/MyFish/MyFishByWayPoints.xaml
+++ b/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/ProvisioningPages/MyFish/MyFishByWayPoints.xaml
@@ -3,4 +3,40 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FishOn.Pages_MVs.ProvisioningPages.MyFish.MyFishByWayPoints"
              Title="By Way Point">
+
+  <StackLayout>
+    <ListView x:Name="speciesHeaderListView"
+              ItemsSource="{Binding FishCaughtByWayPoint}"
+              GroupDisplayBinding="{Binding WayPointName}"
+              GroupShortNameBinding="{Binding WayPointNameShortName}"
+              IsGroupingEnabled="true"
+              HasUnevenRows="true">
+      <ListView.GroupHeaderTemplate>
+        <DataTemplate>
+          <ViewCell Height="25">
+            <StackLayout VerticalOptions="FillAndExpand"
+                         Padding="5"
+                         BackgroundColor="#3498DB">
+              <Label Text="{Binding WayPointName}" TextColor="White" VerticalOptions="Center"/>
+            </StackLayout>
+          </ViewCell>
+        </DataTemplate>
+      </ListView.GroupHeaderTemplate>
+
+      <ListView.ItemTemplate>
+        <DataTemplate>
+          <ViewCell>
+            <StackLayout Orientation="Horizontal">
+              <Label Text="{Binding Species.Name}"></Label>
+              <Label HorizontalOptions="EndAndExpand" Text="{Binding DateCaughtString}"></Label>
+
+            </StackLayout>
+          </ViewCell>
+        </DataTemplate>
+      </ListView.ItemTemplate>
+    </ListView>
+
+    <ActivityIndicator IsRunning="{Binding IsBusy}"></ActivityIndicator>
+  </StackLayout>
+  
 </ContentPage>
