--- a/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/ProvisioningPages/MyFish/MyFishByWayPoints.xaml
+++ b/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/ProvisioningPages/MyFish/MyFishByWayPoints.xaml
@@ -10,7 +10,8 @@
               GroupDisplayBinding="{Binding WayPointName}"
               GroupShortNameBinding="{Binding WayPointNameShortName}"
               IsGroupingEnabled="true"
-              HasUnevenRows="true">
+              HasUnevenRows="true"
+              ItemTapped="FishOnSelectedAsync">
       <ListView.GroupHeaderTemplate>
         <DataTemplate>
           <ViewCell Height="25">
