--- a/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/ProvisioningPages/MyFish/MyFishBySpecies.xaml
+++ b/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/ProvisioningPages/MyFish/MyFishBySpecies.xaml
@@ -11,7 +11,8 @@
               GroupDisplayBinding="{Binding SpeciesGroupName}"
               GroupShortNameBinding="{Binding SpeciesGroupShortName}"
               IsGroupingEnabled="true"
-              HasUnevenRows="true">
+              HasUnevenRows="true"
+              ItemTapped="FishOnSelectedAsync">
       <ListView.GroupHeaderTemplate>
         <DataTemplate>
           <ViewCell Height="25">
