Added FishOn Detail Accordian Logic for Lure and Weather Condition

--- a/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/ProvisioningPages/MyFish/MyFishDetailPage.xaml
+++ b/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/ProvisioningPages/MyFish/MyFishDetailPage.xaml
@@ -1,6 +1,61 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:modelView="clr-namespace:FishOn.ModelView;assembly=FishOnMobileApp"
              x:Class="FishOn.Pages_MVs.ProvisioningPages.MyFish.MyFishDetailPage">
-  <Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />
+
+  
+  <StackLayout>
+
+      <!-- Fishing Lure Accordian Node -->
+       <StackLayout  BackgroundColor="Silver">
+              <BoxView HeightRequest="1" Color="Gray"  HorizontalOptions="FillAndExpand"></BoxView>
+         
+              <!-- Accordian Node Header -->
+              <!-- Padding: Left, Top, Right, Buttom -->
+             <StackLayout Orientation="Horizontal" Padding="5, 10,10,10">
+                     <StackLayout.GestureRecognizers>
+                       <TapGestureRecognizer
+                          Command="{Binding ExpandHideLureData}">
+                       </TapGestureRecognizer>
+                     </StackLayout.GestureRecognizers>
+                     <Label Text="Fishing Lure" />
+                     <Label HorizontalOptions="EndAndExpand" Text="{Binding LureExpanderButtonText}" />
+             </StackLayout>
+         
+             <BoxView HeightRequest="1" Color="Gray"  HorizontalOptions="FillAndExpand"></BoxView>
+       </StackLayout>
+
+        <!-- *** LURE Accordian Node Content ** -->
+       <StackLayout HeightRequest="{Binding LureExpandedHeight}">
+          <Label Text ="Lure Data"></Label>
+       
+      </StackLayout>
+
+    
+      <!-- Weather Accordian Node -->
+      <StackLayout  BackgroundColor="Silver">
+         <BoxView HeightRequest="1" Color="Gray"  HorizontalOptions="FillAndExpand"></BoxView>
+         
+        <!-- Accordian Node Header -->
+          <StackLayout Orientation="Horizontal" Padding="5,10,10, 10">
+            <StackLayout.GestureRecognizers>
+              <TapGestureRecognizer
+                 Command="{Binding ExpandHideWeatherData}">
+              </TapGestureRecognizer>
+            </StackLayout.GestureRecognizers>
+            <Label Text="Weather Conditions" />
+            <Label HorizontalOptions="EndAndExpand" Text="{Binding WeatherExpanderButtonText}" />
+          </StackLayout>
+
+          <BoxView HeightRequest="1" Color="Gray"  HorizontalOptions="FillAndExpand"></BoxView>
+        </StackLayout>
+
+        <!-- ** WEATHER Accordian Node Content-->
+        <StackLayout HeightRequest="{Binding WeatherExpandedHeight}">
+          <Label Text ="Weather Data"></Label>
+
+        </StackLayout>
+    </StackLayout>
+  
 </ContentPage>
