--- a/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/ProvisioningPages/MyFish/MyFishDetailPage.xaml
+++ b/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/ProvisioningPages/MyFish/MyFishDetailPage.xaml
@@ -7,53 +7,138 @@
   
   <StackLayout>
 
-      <!-- Fishing Lure Accordian Node -->
-       <StackLayout  BackgroundColor="Silver">
-              <BoxView HeightRequest="1" Color="Gray"  HorizontalOptions="FillAndExpand"></BoxView>
-         
-              <!-- Accordian Node Header -->
-              <!-- Padding: Left, Top, Right, Buttom -->
-             <StackLayout Orientation="Horizontal" Padding="5, 10,10,10">
-                     <StackLayout.GestureRecognizers>
-                       <TapGestureRecognizer
-                          Command="{Binding ExpandHideLureData}">
-                       </TapGestureRecognizer>
-                     </StackLayout.GestureRecognizers>
-                     <Label Text="Fishing Lure" />
-                     <Label HorizontalOptions="EndAndExpand" Text="{Binding LureExpanderButtonText}" />
-             </StackLayout>
-         
-             <BoxView HeightRequest="1" Color="Gray"  HorizontalOptions="FillAndExpand"></BoxView>
-       </StackLayout>
+      <StackLayout>
+          <StackLayout Orientation="Horizontal">
+                <Label Text="Species"></Label>
+                <Picker x:Name="SpeciesPicker"
+                  VerticalOptions="CenterAndExpand"
+                  SelectedIndex="{Binding SelectedSpeciesIndex}"
+                  HorizontalOptions="FillAndExpand"/>
+          </StackLayout>
+  
+          <StackLayout Orientation="Horizontal">
+            <Label Text="Date Caught"></Label>
+          </StackLayout>
 
-        <!-- *** LURE Accordian Node Content ** -->
-       <StackLayout HeightRequest="{Binding LureExpandedHeight}">
-          <Label Text ="Lure Data"></Label>
+         <StackLayout Orientation="Horizontal">
+          <Label Text="Notes"></Label>
+        </StackLayout>
+
+      </StackLayout>
+
+    <!-- Lure Accordian Node -->
+    <StackLayout  BackgroundColor="{Binding LureAccordion.HeaderBackGroundColor}" Margin="0, 30, 0, 0">
+
+      <BoxView HeightRequest="1" Color="{Binding LureAccordion.LineColor}"  HorizontalOptions="FillAndExpand"></BoxView>
+
+      <!-- Accordian Node Header -->
+      <!-- Padding: Left, Top, Right, Buttom -->
+      <StackLayout Orientation="Horizontal" Padding="5, 10,10,10">
+        <StackLayout.GestureRecognizers>
+          <TapGestureRecognizer
+             Command="{Binding LureAccordion.ExpandContractAccordion}">
+          </TapGestureRecognizer>
+        </StackLayout.GestureRecognizers>
+        <Label TextColor="{Binding LureAccordion.HeaderTextColor}" Text="{Binding LureAccordion.HeaderText}" />
+        <Label TextColor="{Binding LureAccordion.HeaderTextColor}"  HorizontalOptions="EndAndExpand" Text="{Binding LureAccordion.IconText}" />
+      </StackLayout>
+
+      <BoxView HeightRequest="1" Color="{Binding LureAccordion.LineColor}" HorizontalOptions="FillAndExpand"></BoxView>
+    </StackLayout>
+
+
+    <!-- ********************************************************
+                                CONTENT: Lure
+             ******************************************************** -->
+       <StackLayout HeightRequest="{Binding LureAccordion.ContentHeight}" IsVisible="{Binding LureAccordion.IsExpanded}">
+
+         <StackLayout Orientation="Horizontal">
+              <Label Text="Name"></Label>
+         </StackLayout>
+
+         <StackLayout Orientation="Horizontal">
+           <Label Text="Color"></Label>
+         </StackLayout>
+
+         <StackLayout Orientation="Horizontal">
+           <Label Text="Size"></Label>
+         </StackLayout>
+
+         <StackLayout Orientation="Horizontal">
+           <Label Text="Weight"></Label>
+         </StackLayout>
+
+         <StackLayout Orientation="Horizontal">
+           <Label Text="Method Used"></Label>
+         </StackLayout>
+
+         <StackLayout Orientation="Horizontal">
+           <Label Text="Lure Note"></Label>
+         </StackLayout>
        
       </StackLayout>
 
-    
-      <!-- Weather Accordian Node -->
-      <StackLayout  BackgroundColor="Silver">
-         <BoxView HeightRequest="1" Color="Gray"  HorizontalOptions="FillAndExpand"></BoxView>
-         
-        <!-- Accordian Node Header -->
-          <StackLayout Orientation="Horizontal" Padding="5,10,10, 10">
-            <StackLayout.GestureRecognizers>
-              <TapGestureRecognizer
-                 Command="{Binding ExpandHideWeatherData}">
-              </TapGestureRecognizer>
-            </StackLayout.GestureRecognizers>
-            <Label Text="Weather Conditions" />
-            <Label HorizontalOptions="EndAndExpand" Text="{Binding WeatherExpanderButtonText}" />
+
+    <!-- Weather Accordian Node -->
+    <StackLayout  BackgroundColor="{Binding WeatherAccordion.HeaderBackGroundColor}">
+      <BoxView HeightRequest="1" Color="{Binding WeatherAccordion.LineColor}"  HorizontalOptions="FillAndExpand"></BoxView>
+
+      <!-- Accordian Node Header -->
+      <StackLayout Orientation="Horizontal" Padding="5,10,10, 10">
+        <StackLayout.GestureRecognizers>
+          <TapGestureRecognizer
+             Command="{Binding WeatherAccordion.ExpandContractAccordion}">
+          </TapGestureRecognizer>
+        </StackLayout.GestureRecognizers>
+        <Label TextColor="{Binding WeatherAccordion.HeaderTextColor}" Text="{Binding WeatherAccordion.HeaderText}" />
+        <Label TextColor="{Binding WeatherAccordion.HeaderTextColor}"  HorizontalOptions="EndAndExpand" Text="{Binding WeatherAccordion.IconText}" />
+      </StackLayout>
+
+      <BoxView HeightRequest="1" Color="Gray"  HorizontalOptions="FillAndExpand"></BoxView>
+    </StackLayout>
+
+
+    <!-- ********************************************************
+                                CONTENT: Weather
+             ********************************************************    -->
+        <StackLayout HeightRequest="{Binding WeatherAccordion.ContentHeight}" IsVisible="{Binding WeatherAccordion.IsExpanded}">
+          <StackLayout Orientation="Horizontal">
+            <Label Text="Air Temp"></Label>
           </StackLayout>
 
-          <BoxView HeightRequest="1" Color="Gray"  HorizontalOptions="FillAndExpand"></BoxView>
-        </StackLayout>
+          <StackLayout Orientation="Horizontal">
+            <Label Text="Water Temp"></Label>
+          </StackLayout>
 
-        <!-- ** WEATHER Accordian Node Content-->
-        <StackLayout HeightRequest="{Binding WeatherExpandedHeight}">
-          <Label Text ="Weather Data"></Label>
+
+          <StackLayout Orientation="Horizontal">
+            <Label Text="Wind"></Label>
+          </StackLayout>
+
+          <StackLayout Orientation="Horizontal">
+            <Label Text="Berometric Pressure"></Label>
+          </StackLayout>
+
+          <StackLayout Orientation="Horizontal">
+            <Label Text="Dew Point"></Label>
+          </StackLayout>
+
+          <StackLayout Orientation="Horizontal">
+            <Label Text="Visibility"></Label>
+          </StackLayout>
+
+          <StackLayout Orientation="Horizontal">
+            <Label Text="Humidity"></Label>
+          </StackLayout>
+
+          <StackLayout Orientation="Horizontal">
+            <Label Text=""></Label>
+          </StackLayout>
+
+
+          <StackLayout Orientation="Horizontal">
+            <Label Text="Moon Illumination"></Label>
+          </StackLayout>
 
         </StackLayout>
     </StackLayout>
