--- a/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/ProvisioningPages/MyFish/MyFishBySpecies.xaml
+++ b/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/ProvisioningPages/MyFish/MyFishBySpecies.xaml
@@ -5,7 +5,9 @@
              x:Class="FishOn.Pages_MVs.ProvisioningPages.MyFish.MyFishBySpecies"
              Title="By Species">
 
+  
   <StackLayout>
+  <ScrollView HorizontalOptions="FillAndExpand">
     <ListView x:Name="speciesHeaderListView" 
               ItemsSource="{Binding FishCaughtBySpecies}" 
               GroupDisplayBinding="{Binding SpeciesGroupName}"
@@ -15,11 +17,11 @@
               ItemTapped="FishOnSelectedAsync">
       <ListView.GroupHeaderTemplate>
         <DataTemplate>
-          <ViewCell Height="25">
+          <ViewCell Height="40">
             <StackLayout VerticalOptions="FillAndExpand"
                          Padding="5"
                          BackgroundColor="#3498DB">
-              <Label Text="{Binding SpeciesGroupName}" TextColor="White" VerticalOptions="Center"/>
+              <Label Text="{Binding SpeciesGroupName}" TextColor="White" HeightRequest="40" FontSize="24" VerticalOptions="Center"/>
             </StackLayout>
           </ViewCell>
         </DataTemplate>
@@ -28,16 +30,16 @@
       <ListView.ItemTemplate>
         <DataTemplate>
           <ViewCell>
-            <StackLayout Orientation="Horizontal">
-              <Label Text="{Binding WayPoint.Name}"></Label>
-              <Label HorizontalOptions="EndAndExpand" Text="{Binding DateCaughtString}"></Label>
+            <StackLayout Orientation="Horizontal" Padding="5,5">
+              <Label Text="{Binding WayPoint.Name}" FontSize="18"></Label>
+              <Label HorizontalOptions="EndAndExpand" Text="{Binding DateTimeCaughtString}"></Label>
               
             </StackLayout>
           </ViewCell>
          </DataTemplate>
       </ListView.ItemTemplate>
     </ListView>
-    
+  </ScrollView>
     <ActivityIndicator IsRunning="{Binding IsBusy}"></ActivityIndicator>
   </StackLayout>
 </ContentPage>
