--- a/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/ProvisioningPages/MyFish/MyFishByWayPoints.xaml
+++ b/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/ProvisioningPages/MyFish/MyFishByWayPoints.xaml
@@ -5,8 +5,10 @@
              Title="By Way Point">
 
   <StackLayout>
+    <ScrollView HorizontalOptions="FillAndExpand">
+     
     <ListView x:Name="speciesHeaderListView"
-              ItemsSource="{Binding FishCaughtByWayPoint}"
+              ItemsSource="{Binding FishCaughtByWayPoint, Mode=TwoWay}"
               GroupDisplayBinding="{Binding WayPointName}"
               GroupShortNameBinding="{Binding WayPointNameShortName}"
               IsGroupingEnabled="true"
@@ -14,11 +16,11 @@
               ItemTapped="FishOnSelectedAsync">
       <ListView.GroupHeaderTemplate>
         <DataTemplate>
-          <ViewCell Height="25">
+          <ViewCell Height="40">
             <StackLayout VerticalOptions="FillAndExpand"
                          Padding="5"
                          BackgroundColor="#3498DB">
-              <Label Text="{Binding WayPointName}" TextColor="White" VerticalOptions="Center"/>
+              <Label Text="{Binding WayPointName}" TextColor="White" VerticalOptions="Center" HeightRequest="40" FontSize="24"/>
             </StackLayout>
           </ViewCell>
         </DataTemplate>
@@ -27,16 +29,17 @@
       <ListView.ItemTemplate>
         <DataTemplate>
           <ViewCell>
-            <StackLayout Orientation="Horizontal">
-              <Label Text="{Binding Species.Name}"></Label>
-              <Label HorizontalOptions="EndAndExpand" Text="{Binding DateCaughtString}"></Label>
+            <StackLayout Orientation="Horizontal" Padding="5,5">
+              <Label Text="{Binding Species.Name}" FontSize="18"></Label>
+              <Label HorizontalOptions="EndAndExpand" Text="{Binding DateTimeCaughtString}"></Label>
 
             </StackLayout>
           </ViewCell>
         </DataTemplate>
       </ListView.ItemTemplate>
     </ListView>
-
+      
+    </ScrollView>
     <ActivityIndicator IsRunning="{Binding IsBusy}"></ActivityIndicator>
   </StackLayout>
   
