--- a/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/LakesList/LakeListPage.xaml
+++ b/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/LakesList/LakeListPage.xaml
@@ -2,7 +2,9 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewModel="clr-namespace:FishOn.ModelView;assembly=FishOnMobileApp"
-             x:Class="FishOn.LakeListPage">
+             x:Class="FishOn.LakeListPage"
+             Title="Select Lake">
+  
   <StackLayout>
       <Label Text="Enter lake names, seperated by commas"></Label>
       <StackLayout Orientation="Horizontal">
