--- a/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/ProvisioningPages/WayPoints/WPDetailPage.xaml
+++ b/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/ProvisioningPages/WayPoints/WPDetailPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FishOn.ProvisioningPages.WayPoints.WPDetailPage"
-             Title="Way Points">
+             Title="Way Pts">
+  
  <StackLayout>
    <StackLayout Orientation="Horizontal">
      <Label Text="Name"></Label>
