--- a/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/Species/SpeciesListPage.xaml
+++ b/Src/FishOnMobileApp/FishOnMobileApp/Pages_MVs/Species/SpeciesListPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:viewModel="clr-namespace:FishOn.ModelView;assembly=FishOnMobileApp"
-             x:Class="FishOn.SpeciesListPage">
+             x:Class="FishOn.SpeciesListPage"
+             Title="Species Selectiion">
   
   <StackLayout>
        <ListView HasUnevenRows="True" x:Name="speciesListView"
